syntax = "proto3";

package airborne.v1;

import "airborne/v1/common.proto";

option go_package = "github.com/ai8future/airborne/gen/go/airborne/v1;airbornev1";

// AirborneService provides unified AI provider access
service AirborneService {
  // GenerateReply generates a completion (unary request/response)
  rpc GenerateReply(GenerateReplyRequest) returns (GenerateReplyResponse);

  // GenerateReplyStream generates a streaming completion
  rpc GenerateReplyStream(GenerateReplyRequest) returns (stream GenerateReplyChunk);

  // SelectProvider determines which provider to use based on content and rules
  rpc SelectProvider(SelectProviderRequest) returns (SelectProviderResponse);
}

// GenerateReplyRequest contains all parameters for generating a reply
message GenerateReplyRequest {
  // Tenant identification (required for multitenant mode, optional for single-tenant)
  // If empty and only one tenant is configured, that tenant is used automatically.
  string tenant_id = 17;

  // Required: System prompt/instructions for the AI
  string instructions = 1;

  // Required: User input (the message to respond to)
  string user_input = 2;

  // Optional: Conversation history for context
  repeated Message conversation_history = 3;

  // Provider selection
  Provider preferred_provider = 4;  // Which provider to use
  string model_override = 5;        // Override the default model

  // Feature flags
  bool enable_file_search = 6;      // Enable RAG with file search
  bool enable_web_search = 7;       // Enable web search grounding
  bool enable_code_execution = 18;  // Enable code interpreter/execution

  // File search configuration
  string file_store_id = 8;                     // Vector store or FileSearchStore ID
  map<string, string> file_id_to_filename = 9;  // Map file IDs to original filenames

  // Conversation continuity (OpenAI-specific, but tracked for all)
  string previous_response_id = 10;

  // Provider configurations (client can override server defaults)
  // Key is provider name: "openai", "gemini", "anthropic"
  map<string, ProviderConfig> provider_configs = 11;

  // Failover settings
  bool enable_failover = 12;        // Enable automatic failover on error
  Provider fallback_provider = 13;  // Specific fallback provider (or use server default order)

  // Request metadata
  string client_id = 14;            // Identifies the calling client
  string request_id = 15;           // Client-provided request ID for tracing
  map<string, string> metadata = 16; // Additional metadata (e.g., user tier, project code)

  // Tool/Function calling
  repeated Tool tools = 19;           // Available tools the model can call
  repeated ToolResult tool_results = 20;  // Results from previous tool calls (for multi-turn)

  // Enable structured output mode (Gemini-only)
  // When true, response includes structured_metadata with intent, entities, topics
  bool enable_structured_output = 21;
}

// GenerateReplyResponse contains the generated reply
message GenerateReplyResponse {
  string text = 1;                  // The generated response text
  string response_id = 2;           // For conversation continuity (OpenAI)
  Usage usage = 3;                  // Token usage metrics
  repeated Citation citations = 4;  // Source citations (from file or web search)
  string model = 5;                 // Actual model used
  Provider provider = 6;            // Actual provider used

  // Failover info (if failover occurred)
  bool failed_over = 7;
  Provider original_provider = 8;
  string original_error = 9;

  // Tool calling
  repeated ToolCall tool_calls = 10;  // Tools the model wants to invoke
  bool requires_tool_output = 11;     // True if client must provide tool results

  // Code execution results (if code was executed)
  repeated CodeExecutionResult code_executions = 12;

  // Generated images (if image generation was triggered)
  repeated GeneratedImage images = 13;

  // HTML-rendered content (if markdown_svc is enabled)
  string html_content = 14;

  // Structured metadata (when enable_structured_output is true)
  StructuredMetadata structured_metadata = 15;

  // Grounding/web search cost tracking
  int32 grounding_queries = 16;    // Number of web search queries executed
  double grounding_cost_usd = 17;  // Cost of grounding queries in USD
}

// GenerateReplyChunk is a streaming response chunk
message GenerateReplyChunk {
  oneof chunk {
    TextDelta text_delta = 1;
    UsageUpdate usage_update = 2;
    CitationUpdate citation_update = 3;
    StreamComplete complete = 4;
    StreamError error = 5;
    ToolCallUpdate tool_call_update = 6;
    CodeExecutionUpdate code_execution_update = 7;
  }
}

// ToolCallUpdate signals a tool call during streaming
message ToolCallUpdate {
  ToolCall tool_call = 1;
}

// CodeExecutionUpdate signals code execution during streaming
message CodeExecutionUpdate {
  CodeExecutionResult execution = 1;
}

// TextDelta contains incremental text
message TextDelta {
  string text = 1;
  int32 index = 2;  // Position in the full response
}

// UsageUpdate provides intermediate token counts
message UsageUpdate {
  Usage usage = 1;
}

// CitationUpdate adds a citation during streaming
message CitationUpdate {
  Citation citation = 1;
}

// StreamComplete signals successful stream completion
message StreamComplete {
  string response_id = 1;
  string model = 2;
  Provider provider = 3;
  Usage final_usage = 4;
  repeated Citation citations = 5;
  repeated ToolCall tool_calls = 6;
  bool requires_tool_output = 7;
  repeated CodeExecutionResult code_executions = 8;
  repeated GeneratedImage images = 9;
  string html_content = 10;  // HTML-rendered content (if markdown_svc is enabled)
  StructuredMetadata structured_metadata = 11;  // Structured metadata (when enable_structured_output is true)
}

// StreamError signals an error during streaming
message StreamError {
  string code = 1;
  string message = 2;
  bool retryable = 3;
}

// GeneratedImage represents an AI-generated image
message GeneratedImage {
  bytes data = 1;          // Raw image bytes (JPEG/PNG)
  string mime_type = 2;    // MIME type (e.g., "image/jpeg")
  string prompt = 3;       // The prompt used to generate the image
  string alt_text = 4;     // Accessibility description
  int32 width = 5;         // Width in pixels
  int32 height = 6;        // Height in pixels
  string content_id = 7;   // Content-ID for email embedding (cid:xxx)
}

// SelectProviderRequest asks which provider should handle a request
message SelectProviderRequest {
  // Tenant identification (required for multitenant mode, optional for single-tenant)
  string tenant_id = 5;

  string content = 1;                    // The input content (for trigger phrase detection)
  string existing_provider = 2;          // Provider from existing thread (for continuity)
  string user_tier = 3;                  // User tier for tier-based routing
  repeated ProviderTrigger triggers = 4; // Custom trigger phrases
}

// ProviderTrigger defines a phrase that triggers a specific provider
message ProviderTrigger {
  string phrase = 1;     // Trigger phrase to match
  Provider provider = 2; // Provider to use when matched
  string model = 3;      // Optional model override
}

// SelectProviderResponse contains the provider selection result
message SelectProviderResponse {
  Provider provider = 1;
  string model_override = 2;
  string reason = 3;  // "trigger", "tier", "continuity", "default"
}
